--- a/novo.html
+++ b/novo.html
@@ -571,11 +571,10 @@ function openModal(tipo) {
     classic: `
       <h2>Apartamento Classic</h2>
       <p>Conforto e praticidade com excelente custo-benefício. Perfeito para estadias curtas ou longas, oferecendo tudo o que você precisa para se sentir em casa.</p>
-      <h3>Especificações:</h3>
+      <h3>O que tem no quarto:</h3>
       <ul>
         <li><strong>Tamanho:</strong> 20 m²</li>
-        <li><strong>Cama:</strong> Cama de solteiro ou casal</li>
-        <li><strong>Ar-condicionado</strong></li>
-        <li><strong>TV LED 32"</strong> com canais a cabo</li>
-        <li><strong>Wi-Fi gratuito</strong> de alta velocidade</li>
-        <li><strong>Banheiro privativo</strong> com
+        <li><strong>Cama:</strong> Cama de solteiro ou casal com lençóis de algodão egípcio</li>
+        <li><strong>Ar-condicionado</strong> split com controle remoto</li>
+        <li><strong>TV LED 32"</strong> com canais a cabo e Netflix</li>
+        <li><strong>Wi-Fi gratuito</strong> de
