--- a/novo1.html
+++ b/novo1.html
@@ -428,7 +428,7 @@ footer{
   <div class="container">
     <h2>Localização</h2>
     <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.5!2d-42.0297!3d-20.7308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMjDCsDQzJzQ4LjAiUyA0MsKwMDEnNDguMCJX!5e0!3m2!1sen!2sbr!4v123456789!5m2!1sen!2sbr" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.5!2d-42.0297!3d-20.7308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMjDCsDQzJzQ4LjAiUyA0MsKwMDEnNDguMCJX!5e0!3m2!1sen!2sbr!4v123456789!5m2!1sen!2sbr&q=Hotel+Palace+R.+Pedro+de+Oliveira+368+Centro+Carangola+MG+36800-082" allowfullscreen="" loading="lazy"></iframe>
       <p style="margin-top:20px; font-size:1.1rem; color:#666;">📍 Rua Pedro de Oliveira, 368 – Centro – Carangola/MG</p>
     </div>
   </div>
